lab-ingress-gke/hello-kubernetes-first-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: NodePort
  selector:
    greeting: hello
    department: world
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 50000
