lab-ingress-gke/hello-kubernetes-second-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: NodePort
  selector:
    greeting: hello
    department: kubernetes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
