lab-ingress-gke/hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: hello-world
              servicePort: 60000
          - path: /kube
            backend:
              serviceName: hello-kubernetes
              servicePort: 80
